# esp32-xbee

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  bluetooth.c  config.c  core_dump.c  log.c  main.c  nmea.c  ntrip2.c  ntrip2_client.c  ntrip2_server.c  ntrip_caster.c  ntrip_client.c  ntrip_server.c  ntrip_util.c  retry.c  socket_client.c  socket_server.c  status_led.c  stream_stats.c  uart.c  util.c  web_server.c  wifi.c
main/include/: bluetooth.h  config.h  core_dump.h  log.h  nmea.h  ntrip.h  ntrip2.h  ntrip_util.h  retry.h  socket_client.h  socket_server.h  status_led.h  stream_stats.h  tasks.h  uart.h  util.h  web_server.h  wifi.h
main/include/interface/: ntrip.h
main/include/protocol/: nmea.h
main/interface/: ntrip2_client.c  ntrip2_server.c  ntrip_caster.c  ntrip_client.c  ntrip_server.c  ntrip_util.c  socket_client.c  socket_server.c
main/protocol/: nmea.c
www/: bootstrap-4.3.1.min.css  index.html  log.html
